# ti4-map-generator

./: LICENSE  pyproject.toml
config/: planets.csv  tiles.json
tests/: test_ti4_map_generator.py
ti4_map_generator/: __init__.py  logging.py  map_generation.py
