[tool.poetry]
name = "ti4_map_generator"
version = "0.1.0"
description = "Tool for generating slices or entire maps of tiles for the Tabletop Simulator mod of the boardgame Twilight Imperium 4"
authors = ["Helian Liadon <helian@rerum.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
colorlog = "^6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4"

[tool.poetry.scripts]
generate-slices = "ti4_map_generator:generate_slices"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
